# dataviewer

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
dataviewer/: __init__.py  cli.py  core.py  llm.py
examples/: view_mnist_train.py  view_princeton-nlp_SWE-bench_train.py
